# true-random

./: .hgignore  CMakeLists.txt  Random.sln
Dieharder/: Interface.c  Interface.cpp  Interface.h  gettimeofday.c  unistd.h
Dieharder/dieharder/: dieharder.c  parsecl.c  rng_empty_random.c  user_template.h
Dieharder/include/dieharder/: Dtest.h  dab_bytedistrib.h  dab_dct.h  dab_filltree.h  diehard_dna.h  (+34 more)
Dieharder/libdieharder/: bits.cpp  dab_dct.c  dab_filltree.c  dab_filltree.cpp  dab_filltree2.c  diehard_bitstream.cpp  diehard_count_1s_byte.cpp  diehard_count_1s_stream.c  diehard_count_1s_stream.cpp  diehard_dna.cpp  diehard_rank_32x32.cpp  diehard_rank_6x8.cpp  dieharder_rng_types.c  marsaglia_tsang_gcd.cpp  parse.c  rgb_bitdist.c  rgb_bitdist.cpp  rgb_lmn.cpp  rgb_operm.c  rgb_operm.cpp  rng_XOR.c  rng_XOR.cpp  rng_aes.c  rng_ca.c  rng_dev_arandom.c  rng_dev_random.c  rng_dev_urandom.c  rng_file_input.c  rng_file_input_raw.c  rng_jenkins.c  rng_kiss.c  rng_stdin_input_raw.c  rng_superkiss.c  rng_threefish.c  rng_uvag.c  rng_uvag.cpp  rngs_gnu_r.c  rngs_gnu_r.cpp  skein_block64.c  static_get_bits.c  (+4 more)
Random/: AsyncBitGenerator.cpp  AsyncBitGenerator.h  BitGenerator.cpp  BitGenerator.h  CMakeLists.txt  DistibutableGenerator.cpp  DistibutableGenerator.h  DistributableGenerator.h  Distributor.h  Generator.h  IntegerGenerator.cpp  IntegerGenerator.h  NormalDistributor.h  NumberGenerator.cpp  NumberGenerator.h  Random.vcxproj  Random.vcxproj.filters  RandomNumberGenerator.h  RandomNumberGeneratorFactory.cpp  RandomNumberGeneratorFactory.h  RangeDistributor.cpp  RangeDistributor.h  ReadMe.txt  RedistributionRequired.cpp  RedistributionRequired.h  SourceOfNondeterminism.cpp  SourceOfNondeterminism.h  SourceOfNondeterminismFactory.cpp  SourceOfNondeterminismFactory.h  ThreadedSourceOfNondeterminism.cpp  ThreadedSourceOfNondeterminism.h  UnitDistributor.h  resource.h
Test/: AverageDistributor.cpp  AverageDistributor.h  CMakeLists.txt  CharPadder.h  SquaredDistributor.cpp  SquaredDistributor.h  Test.vcxproj  Test.vcxproj.filters  program.cpp
Test/Tests/: distribution1B1E8S.ods  distribution1B1E9S.ods  distribution2B1E8S.ods  distribution4E8.ods  repitition distribution1B1E8S.csv  repitition distribution1B1E8S.ods  repitition distribution1B1E9S.ods  repitition distribution1B2E7S.ods  repitition distribution2B1E8S.ods  repitition distribution2E7.ods
rand/: bib.bib  rand.tex
rand/input/: abstract.tex  acknowledgements.tex  conclusion.tex  discussion.tex  intro.tex  method.tex  result.tex
truerand/: CMakeLists.txt  main.cpp
